# trader

./: .coverage  .env.example  .flake8  .gitignore  linting.sh  pyproject.toml  testing.sh
.github/workflows/: python.yaml
src/trader/: __init__.py  env.py  main.py  seed.py
src/trader/data/: future_price.py  future_store.py  mongo_store.py  symbol_enums.py  table_enums.py
src/trader/lib/: parallel_execute.py
src/trader/services/: mongo_conn.py
tests/mocks/: aiohttp_mock.py
tests/trader/: env_test.py
tests/trader/data/: future_price_test.py  future_store_test.py  mongo_store_test.py
tests/trader/lib/: parallel_execute_test.py
tests/trader/services/: mongo_conn_test.py
