[tool.poetry]
name = "trader"
version = "0.1.0"
description = ""
authors = ["Lwin Maung Maung <lwinmaungmaung.ytu@gmail.com>"]
readme = "README.md"
packages = [{include = "trader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.5"
pytest-asyncio = "^0.23.6"
notebook = "^7.1.3"
jupyterlab = "^4.1.8"
black = "^24.4.2"
flake8 = "^7.0.0"
pylint = "^3.1.0"
motor = "^3.4.0"

[tool.poetry.scripts]
start = "trader.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
